--- a/public/css/login.css
+++ b/public/css/login.css
@@ -83,7 +83,7 @@
     border-color: white;
     /* border: none; */
     border-radius: 21px;
-    color: #c6c6c6;
+    color: #5a5a5a;
     font-size: 16px;
     padding-left: 29px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
